cmake_minimum_required(VERSION 3.13)
project(SauSaGe)
set(CMAKE_CXX_STANDARD 17)
set(PROJECT_ROOT "${PROJECT_SOURCE_DIR}")
set(CMAKE_DIRECTORY "${PROJECT_SOURCE_DIR}/")
set(SOURCE_FILES ${CMAKE_DIRECTORY}/main.cpp ${CMAKE_DIRECTORY}/Files.cpp ${CMAKE_DIRECTORY}/Text.cpp ${CMAKE_DIRECTORY}/Tests.cpp)
add_executable(SauSaGe ${SOURCE_FILES})
set(OUTPUT_NAME SauSaGe.exe)
set_target_properties(PROPERTIES OUTPUT_NAME "SauSaGe")